2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/jamendo/jamendo.glade:
	* src/plugins/jamendo/jamendo.py: Corrected previous
	commits, patch from David JEAN LOUIS <izimobil@gmail.com>

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: We also support SID files,
	patch from Robin Sonefors <ozamosi@flukkost.nu>
	(Closes: #559953)

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (on_eos_event):
	Fix repeat being ignored when playing back the stream
	from the disk and it is seekable (Closes: #557407)

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_init): Fix default zoom ratio being
	zero when using the web browser, and a single dot appearing
	as video

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/properties/bacon-video-widget-properties.c
	(bacon_video_widget_properties_reset): Change empty
	comment to show as empty not "Unknown" (Closes: #563298)

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Add a "subtitle-download-placeholder"
	placeholder in the UI for the OpenSubtitles plugin
	to slot in there

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/jamendo/jamendo.glade: Fix duplicate XML
	in the file

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plugins/jamendo/Makefile.am:
	* src/plugins/jamendo/jamendo.glade:
	* src/plugins/jamendo/jamendo.py:
	* src/plugins/jamendo/jamendo.totem-plugin.in:
	* totem.spec.in: Patch from David JEAN LOUIS <izimobil@gmail.com>
	to add the Jamendo plugin (Closes: #561811)

2008-12-03  Bastien Nocera  <hadess@hadess.net>

	* bindings/python/totem.defs: Fix add_to_playlist_and_play
	bindings, as spotted by izi

2008-12-03  Bastien Nocera  <hadess@hadess.net>

	* bindings/python/totem.defs: Add add_to_playlist_and_play to the
	bindings, add toggle-aspect and stop to the possible remote commands
